[metadata]
name    = indexed_bzip2
version = 1.4.0

description   = Fast random access to bzip2 files
url           = https://github.com/mxmlnkn/indexed_bzip2
author        = Maximilian Knespel
author_email  = mxmlnkn@github.de
license       = MIT
license_files = LICENSE
classifiers   =
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: C++
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving
    Topic :: System :: Archiving :: Compression

long_description = file: README.md
long_description_content_type = text/markdown

[options]
py_modules = indexed_bzip2
python_requires = >= 3.6

[options.entry_points]
console_scripts = ibzip2=indexed_bzip2:cli
