[metadata]
name    = pragzip
version = 0.6.0

description   = Parallel random access to gzip files
url           = https://github.com/mxmlnkn/pragzip
author        = Maximilian Knespel
author_email  = mxmlnkn@github.de
license       = MIT
license_files =
    LICENSE-APACHE
    LICENSE-MIT

classifiers   =
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: C++
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving
    Topic :: System :: Archiving :: Compression

long_description = file: README.md
long_description_content_type = text/markdown

[options]
py_modules = pragzip
python_requires = >= 3.6

[options.entry_points]
console_scripts = pragzip=pragzip:cli
