# See https://setuptools.readthedocs.io/en/latest/build_meta.html

[build-system]
# Use setuptools >= 43 because it automatically includes pyproject.toml in source distribution
# Use setuptools >= 46.5 to use attr: package.__version__
# Use setuptools < 72 because of this: https://github.com/pypa/distutils/issues/283
# Use setuptools < 74 because of removed msvccompiler:
# https://github.com/pypa/setuptools/issues/4612
# https://github.com/pypa/setuptools/issues/3532
# https://github.com/pypa/setuptools/pull/3505
# https://github.com/zhisong/pyoculus/issues/10
# https://setuptools.readthedocs.io/en/latest/history.html#id284
requires = ["setuptools >= 46.4.0, < 72", "wheel", "cython >= 0.29.24"]
