add_executable(testFileReader)
target_sources(testFileReader PRIVATE ${CMAKE_CURRENT_LIST_DIR}/FileReader.cpp)
target_link_libraries(testFileReader PRIVATE indexed_bzip2_parallel)
add_test(NAME Test-File-Reader COMMAND testFileReader)
add_dependencies(all_tests testFileReader)

add_executable(testBitReader)
target_sources(testBitReader PRIVATE ${CMAKE_CURRENT_LIST_DIR}/BitReader.cpp)
target_link_libraries(testBitReader PRIVATE indexed_bzip2_parallel)
add_test(NAME Test-Bit-Reader COMMAND testBitReader)
add_dependencies(all_tests testBitReader)

add_executable(testBitStringFinder)
target_sources(testBitStringFinder PRIVATE ${CMAKE_CURRENT_LIST_DIR}/BitStringFinder.cpp)
target_link_libraries(testBitStringFinder PRIVATE indexed_bzip2_parallel)
add_test(NAME Test-Bit-String-Finder COMMAND testBitStringFinder)
add_dependencies(all_tests testBitStringFinder)

add_executable(testParallelBitStringFinder)
target_sources(testParallelBitStringFinder PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ParallelBitStringFinder.cpp)
target_link_libraries(testParallelBitStringFinder PRIVATE indexed_bzip2_parallel)
add_test(NAME Test-Parallel-Bit-String-Finder COMMAND testParallelBitStringFinder)
add_dependencies(all_tests testParallelBitStringFinder)

add_executable(testThreadPool)
target_sources(testThreadPool PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ThreadPool.cpp)
target_link_libraries(testThreadPool PRIVATE indexed_bzip2_parallel)
add_test(NAME Test-Thread-Pool COMMAND testThreadPool)
add_dependencies(all_tests testThreadPool)

add_executable(testPrefetcher)
target_sources(testPrefetcher PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Prefetcher.cpp)
target_link_libraries(testPrefetcher PRIVATE indexed_bzip2_parallel)
add_test(NAME Test-Prefetcher COMMAND testPrefetcher)
add_dependencies(all_tests testPrefetcher)
